kubernetes/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - longhorn.home.lobotechworks.pt
    secretName: longhorn-frontend-tls
  rules:
  - host: longhorn.home.lobotechworks.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
